# argentine-deputies-discursive-distance

./: .gitignore  README.md  conftest.py  pyproject.toml
config/: block_alignment.csv  document_status_overrides.csv  modeling_turn_overrides.json  pdf_pilot.csv  pipeline.toml  session_overrides.csv
docs/: CLAUDE_KICKOFF_PROMPT.md  CORPUS_PROFILE.md  CURRENT_STATE.md  DECISION_LOG.md  EVIDENCE_LEDGER.md  FINAL_PROJECT_STATE.md  FINAL_SCOPE_FREEZE.md  MANUAL_IDENTITY_QA_PROTOCOL.md  MODELING_CORPUS_EXPORT.md  NMF_GRID.md  PARALLEL_WORK_PROTOCOL.md  POLITICAL_METADATA_METHODOLOGY.md  PRESENTATION_OUTLINE.md  REPORT_OUTLINE.md  SELECTED_NMF_ANALYSIS.md  SPEAKER_TURN_BATCH_OUTPUTS.md  TEAMMATE_HANDOFF.md  final_evidence_ledger.csv  legacy_provenance.md  research_protocol.md
notebooks/: exp4_familias_politicas.ipynb  heatmaps_topicos_sustantivos.ipynb
presentation/: FINAL_CHECKLIST.md  ORAL_SCRIPT.md  Q_AND_A.md  SLIDE_DECK_CONTENT.md  generate_charts.py
scripts/: apply_final_repository_docs.py  build_bertopic_representatives.py  build_final_evidence_ledger.py  build_final_figures.py  finalize_bertopic_integration.py  refresh_final_figure_layouts.py  validate_reference_data.py
tests/: test_cli.py  test_corpus_profile.py  test_discover.py  test_identifiers.py  test_layout.py  test_modeling_corpus.py  test_nmf_grid.py  test_pdf_batch.py  test_pdf_pipeline.py  test_reference_data.py  test_selected_nmf_analysis.py  test_speaker.py  test_speaker_turn_pipeline.py  test_speaker_turns.py  test_structure.py  test_structure_batch.py  test_structure_pipeline.py  (+2 more)
(+47 files in other folders)
