[project]
name = "argentine-deputies-discursive-distance"
version = "0.1.0"
description = "NLP analysis of government–opposition discursive distance in Argentina's Chamber of Deputies."
readme = "README.md"
authors = [
    { name = "geronimofretes", email = "gfretes@itba.edu.ar" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "typer>=0.26.7",
]

[project.scripts]
deputies-distance = "argentine_deputies_discursive_distance.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["argentine_deputies_discursive_distance"]
